[package]
publish = false
name = "rust-cache"
version = "0.1.0"
authors = ["Arpad Borsos <arpad.borsos@googlemail.com>"]
edition = "2018"

[dev-dependencies]
reqwest = "0.11.0"
regex = "1.4.3"
actix-web = { git = "https://github.com/actix/actix-web.git", rev = "991363a1042fe4046210cfe4356716976a10cb56" }
